--- a/app/src/main/res/layout/activity_blocly.xml
+++ b/app/src/main/res/layout/activity_blocly.xml
@@ -9,6 +9,7 @@
         android:text="Hello, world!"
         android:textSize="26sp"
         android:gravity="center"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        style="@style/CustomTextViewStyle"/>
 
 </LinearLayout>
