--- a/app/src/main/res/layout/activity_blocly.xml
+++ b/app/src/main/res/layout/activity_blocly.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/mainTextView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:text="Hello, world!"
