--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
         // #1
         <item name="android:ellipsize">end</item>
         // #2
-        <item name="robotoFont">Regular</item>
+        <item name="robotoFont">CondensedBold</item>
     </style>
 
     <style name="Caption">
@@ -19,13 +19,19 @@
         <item name="android:textSize">12sp</item>
         <item name="android:lines">1</item>
         <item name="android:ellipsize">end</item>
-        <item name="robotoFont">Regular</item>
+        <item name="robotoFont">CondensedRegular</item>
     </style>
 
     <style name="Body1">
         <item name="android:textColor">@color/text_secondary</item>
         <item name="android:textSize">14sp</item>
-        <item name="robotoFont">Regular</item>
+        <item name="robotoFont">MediumItalic</item>
+    </style>
+
+    <style name="CustomBody">
+        <item name="android:textColor">@color/text_secondary</item>
+        <item name="condensed">true</item>
+        <item name="robotoStyle">bold|italic</item>
     </style>
 
 </resources>
