--- a/app/src/main/res/drawable/list_selector.xml
+++ b/app/src/main/res/drawable/list_selector.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/black_26"
-        android:state_pressed="true"/>
+    <item android:state_pressed="true">
+        <shape android:shape="oval">
+            <solid android:color="@color/black_87"/>
+        </shape>
+    </item>
     <item android:drawable="@android:color/transparent"/>
 </selector>
