--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,4 +28,9 @@
         <item name="robotoFont">Regular</item>
     </style>
 
+    <style name="Button">
+        <item name="android:textColor">@drawable/btn_text_drawable</item>
+        <item name="android:textSize">14sp</item>
+        <item name="robotoFont">Medium</item>
+    </style>
 </resources>
