--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,4 +33,12 @@
         <item name="android:textSize">14sp</item>
         <item name="robotoFont">Medium</item>
     </style>
+
+    <style name="CustomButton">
+        <item name="android:textSize">14sp</item>
+        <item name="robotoFont">Medium</item>
+        <item name="android:textColor">@android:color/holo_blue_dark</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
 </resources>
