Assignment 42 Drawer Layout Part 1: completed

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,5 +42,8 @@
 
     <style name="DrawerArrow" parent="Base.Widget.AppCompat.DrawerArrowToggle">
         <item name="android:color">@color/actionBarItems</item>
+        <item name="barLength">24dp</item>
+        <item name="gapBetweenBars">7dp</item>
+        <item name="drawableSize">36dp</item>
     </style>
 </resources>
