--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,14 @@
         <item name="colorAccent">@color/accent</item>
     </style>
 
+    <style name="NavigationItem">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@drawable/navigation_item_text</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="robotoFont">Medium</item>
+    </style>
+
     <style name="Headline">
         <item name="android:textColor">@color/text_primary</item>
         <item name="android:textSize">24sp</item>
