--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,12 @@
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
+        <item name="android:actionOverflowButtonStyle">@style/OverflowButton</item>
+    </style>
+
+    <style name="OverflowButton" parent="android:Widget.Holo.ActionButton.Overflow">
+        <item name="android:src">@drawable/ic_overflow_menu_selector</item>
+        <item name="android:paddingLeft">@dimen/default_padding</item>
     </style>
 
     <style name="NavigationItem">
