--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,11 +16,24 @@
         <item name="android:paddingLeft">@dimen/default_padding</item>
     </style>
 
+    <style name="RssItemDetailHeader" parent="Base.TextAppearance.AppCompat.Display1">
+        <item name="android:textColor">@color/black_54</item>
+        <item name="android:maxLines">3</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
     <style name="NavigationItem">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@drawable/navigation_item_text</item>
         <item name="android:singleLine">true</item>
         <item name="android:gravity">center_vertical</item>
+        <item name="robotoFont">Medium</item>
+    </style>
+
+    <style name="RssItemTitle" parent="Base.TextAppearance.AppCompat.Body2">
+        <item name="android:textColor">@color/text_primary</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:singleLine">true</item>
         <item name="robotoFont">Medium</item>
     </style>
 
