--- a/app/src/main/res/layout/fragment_rss_item_detail.xml
+++ b/app/src/main/res/layout/fragment_rss_item_detail.xml
@@ -1,4 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/tb_fragment_rss_item_details"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white_primary">
+
+        <io.bloc.android.blocly.ui.widget.RobotoTextView
+            style="@style/Button"
+            android:id="@+id/tv_fragment_rss_item_visit_site"
+            android:text="visit site"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginLeft="16dp"/>
+
+        <CheckBox
+            android:id="@+id/cb_fragment_rss_item_favorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:button="@drawable/btn_star_checkbox"
+            android:layout_gravity="right"
+            android:layout_marginLeft="16dp"/>
+
+        <CheckBox
+            android:id="@+id/cb_fragment_rss_item_archived"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:button="@drawable/btn_check_checkbox"
+            android:layout_gravity="right" />
+
+    </android.support.v7.widget.Toolbar>
+
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -58,3 +97,5 @@
     </RelativeLayout>
 
 </ScrollView>
+
+</LinearLayout>
